[gd_scene load_steps=15 format=3 uid="uid://dm3etdvwy8w87"]

[ext_resource type="PackedScene" uid="uid://dv5mrjfpaqac1" path="res://components/level/level.tscn" id="1_kjijw"]
[ext_resource type="Script" path="res://scenes/levels/level1/level1.gd" id="2_8b2pf"]
[ext_resource type="Texture2D" uid="uid://bsby7nuwembmi" path="res://resources/textures/background/beggining_background.png" id="2_wkpgp"]
[ext_resource type="PackedScene" uid="uid://bji7wru27com8" path="res://components/level1/mother.tscn" id="4_8kyyb"]
[ext_resource type="PackedScene" uid="uid://cf83rm74m3jjs" path="res://components/teleporter/teleporter.tscn" id="5_qs7uw"]
[ext_resource type="Texture2D" uid="uid://dusn7xfu2108u" path="res://resources/textures/tutorial/tutorial_door.png" id="6_utuum"]
[ext_resource type="PackedScene" uid="uid://btqnvl5nlhs0h" path="res://components/item/item.tscn" id="7_qy2n6"]
[ext_resource type="PackedScene" uid="uid://dfar48g46gl8d" path="res://components/button/button.tscn" id="8_ubejb"]
[ext_resource type="PackedScene" uid="uid://p62nopxpk7of" path="res://components/box/box.tscn" id="9_btgg1"]
[ext_resource type="Texture2D" uid="uid://buo71hexgk2h3" path="res://resources/textures/tutorial/backpack.png" id="9_ty2if"]
[ext_resource type="Texture2D" uid="uid://bsxmt2x81q3ne" path="res://resources/textures/tutorial/tutorial_box_0.png" id="10_5lq5f"]
[ext_resource type="PackedScene" uid="uid://b8hw5v5hrvfq2" path="res://components/level1/door.tscn" id="11_1p26e"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hum7y"]
size = Vector2(15, 73)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8sfj2"]
size = Vector2(30, 22.5)

[node name="Level" instance=ExtResource("1_kjijw")]
script = ExtResource("2_8b2pf")

[node name="TileMap" parent="." index="1"]
layer_0/tile_data = PackedInt32Array(393216, 1, 0, 393217, 1, 0, 393218, 1, 0, 393219, 1, 0, 393220, 1, 0, 393221, 1, 0, 393222, 1, 0, 393223, 1, 0, 393224, 1, 0, 393225, 1, 0, 393226, 1, 0, 393227, 1, 0, 393228, 1, 0, 393229, 1, 0, 0, 65537, 0, 1, 65537, 0, 2, 65537, 0, 3, 65537, 0, 4, 65537, 0, 5, 65537, 0, 6, 65537, 0, 7, 65537, 0, 8, 65537, 0, 9, 65537, 0, 10, 65537, 0, 11, 65537, 0, 12, 65537, 0, 13, 65537, 0, 458751, 131073, 0, 393215, 1, 1, 327679, 1, 1, 262143, 1, 1, 196607, 1, 1, 131071, 1, 1, 65535, 1, 1, 14, 1, 65537, 65550, 1, 65537, 131086, 1, 65537, 196622, 1, 65537, 262158, 1, 65537, 327694, 1, 65537, 393230, 131073, 0, -65536, 1, 0, -65535, 1, 0, -65534, 1, 0, -65533, 1, 0, -65532, 1, 0, -65531, 1, 0, -65530, 1, 0, -65529, 1, 0, -65528, 1, 0, -65527, 1, 0, -65526, 1, 0, -65525, 1, 0, -65524, 1, 0, -65523, 1, 0, -65537, 1, 1, -1, 1, 1, -131073, 1, 1, -65522, 1, 65537, -131058, 196609, 1, -196594, 196609, 1, 458752, 131073, 0, 458753, 131073, 0, 458754, 131073, 0, 458755, 131073, 0, 458756, 131073, 0, 458757, 131073, 0, 458758, 131073, 0, 458759, 131073, 0, 458760, 131073, 0, 458761, 131073, 0, 458762, 131073, 0, 458763, 131073, 0, 458764, 131073, 0, 458765, 131073, 0, 524287, 131073, 0, 458766, 131073, 0, 393232, 196609, 0, 393233, 196609, 0, 393234, 196609, 0, 327695, 1, 1, 262159, 1, 1, 196623, 1, 1, 131087, 1, 1, 65551, 1, 1, -131057, 1, 1, -196593, 1, 1, 393214, 1, 65537, 327678, 1, 65537, 262142, 1, 65537, 196606, 1, 65537, 131070, 1, 65537, -65538, 1, 65537, -131074, 1, 65537, -2, 1, 65537, 65534, 1, 65537, -65521, 1, 1, 15, 1, 1, 393231, 131073, 0, 458767, 131073, 0, 458768, 131073, 0, 458769, 131073, 0, 458770, 131073, 0, 458771, 131073, 0, 393235, 196609, 0, 393236, 196609, 0, 458772, 131073, 0, 524283, 131073, 0, 524284, 131073, 0, 524285, 131073, 0, 524286, 131073, 0, 524282, 131073, 0, 458749, 196609, 0, 458748, 196609, 0, 458747, 196609, 0, 458746, 196609, 0, 458745, 196609, 0, 458750, 131073, 0, 524281, 131073, 0, 720889, 131073, 0, 786425, 65537, 0, 851961, 131073, 0, 917497, 131073, 0, 983033, 131073, 0, 1048569, 131073, 0, 1114105, 131073, 0, 1179641, 131073, 0, 1245177, 131073, 0, 1310713, 131073, 0, 1376249, 131073, 0, 1441785, 131073, 0, 1507321, 131073, 0, 1572857, 131073, 0, 1638393, 131073, 0, 1703929, 131073, 0, 1769465, 131073, 0, 1835001, 131073, 0, 1900537, 131073, 0, 1966073, 1, 65537, 720890, 131073, 0, 786426, 65537, 0, 851962, 131073, 0, 917498, 131073, 0, 983034, 131073, 0, 1048570, 131073, 0, 1114106, 131073, 0, 1179642, 131073, 0, 1245178, 131073, 0, 1310714, 131073, 0, 1376250, 131073, 0, 1441786, 131073, 0, 1507322, 131073, 0, 1572858, 131073, 0, 1638394, 131073, 0, 1703930, 131073, 0, 1769466, 131073, 0, 1835002, 131073, 0, 1900538, 131073, 0, 1966074, 196609, 1, 720891, 131073, 0, 786427, 65537, 0, 851963, 131073, 0, 917499, 131073, 0, 983035, 131073, 0, 1048571, 131073, 0, 1114107, 131073, 0, 1179643, 131073, 0, 1245179, 131073, 0, 1310715, 131073, 0, 1376251, 131073, 0, 1441787, 131073, 0, 1507323, 131073, 0, 1572859, 131073, 0, 1638395, 131073, 0, 1703931, 131073, 0, 1769467, 131073, 0, 1835003, 131073, 0, 1900539, 131073, 0, 1966075, 196609, 1, 720892, 131073, 0, 786428, 65537, 0, 851964, 131073, 0, 917500, 131073, 0, 983036, 131073, 0, 1048572, 131073, 0, 1114108, 131073, 0, 1179644, 131073, 0, 1245180, 131073, 0, 1310716, 131073, 0, 1376252, 131073, 0, 1441788, 131073, 0, 1507324, 131073, 0, 1572860, 131073, 0, 1638396, 131073, 0, 1703932, 131073, 0, 1769468, 131073, 0, 1835004, 131073, 0, 1900540, 131073, 0, 1966076, 196609, 1, 720893, 131073, 0, 786429, 65537, 0, 851965, 131073, 0, 917501, 131073, 0, 983037, 131073, 0, 1048573, 131073, 0, 1114109, 131073, 0, 1179645, 131073, 0, 1245181, 131073, 0, 1310717, 131073, 0, 1376253, 131073, 0, 1441789, 131073, 0, 1507325, 131073, 0, 1572861, 131073, 0, 1638397, 131073, 0, 1703933, 131073, 0, 1769469, 131073, 0, 1835005, 65537, 2, 1900541, 131073, 2, 1966077, 196609, 1, 720894, 131073, 0, 786430, 65537, 0, 851966, 131073, 0, 917502, 131073, 0, 983038, 131073, 0, 1048574, 131073, 0, 1114110, 131073, 0, 1179646, 131073, 0, 1245182, 131073, 0, 1310718, 131073, 0, 1376254, 131073, 0, 1441790, 131073, 0, 1507326, 131073, 0, 1572862, 131073, 0, 1638398, 131073, 0, 1703934, 131073, 0, 1769470, 131073, 0, 1835006, 65537, 2, 1900542, 131073, 2, 1966078, 196609, 1, 720895, 131073, 0, 786431, 65537, 0, 851967, 131073, 2, 917503, 131073, 2, 983039, 131073, 2, 1048575, 131073, 2, 1114111, 131073, 2, 1179647, 131073, 2, 1245183, 131073, 2, 1310719, 131073, 2, 1376255, 131073, 2, 1441791, 131073, 2, 1507327, 131073, 2, 1572863, 131073, 2, 1638399, 131073, 2, 1703935, 131073, 2, 1769471, 131073, 2, 1835007, 65537, 2, 1900543, 131073, 2, 1966079, 196609, 1, 655360, 131073, 0, 720896, 65537, 0, 786432, 131073, 2, 851968, 2, 1, 917504, 2, 1, 983040, 131074, 0, 1048576, 2, 1, 1114112, 2, 1, 1179648, 2, 1, 1245184, 2, 1, 1310720, 2, 1, 1376256, 2, 1, 1441792, 131074, 0, 1507328, 2, 1, 1572864, 2, 1, 1638400, 2, 1, 1703936, 131073, 2, 1769472, 65537, 2, 1835008, 131073, 2, 1900544, 196609, 1, 655361, 131073, 0, 720897, 65537, 0, 786433, 131073, 2, 851969, 2, 1, 917505, 2, 1, 983041, 131074, 0, 1048577, 2, 1, 1114113, 2, 1, 1179649, 2, 1, 1245185, 2, 1, 1310721, 2, 1, 1376257, 2, 1, 1441793, 131074, 0, 1507329, 2, 1, 1572865, 2, 1, 1638401, 2, 1, 1703937, 131073, 2, 1769473, 65537, 2, 1835009, 131073, 2, 1900545, 196609, 1, 655362, 131073, 0, 720898, 65537, 0, 786434, 131073, 2, 851970, 2, 1, 917506, 2, 1, 983042, 131074, 0, 1048578, 2, 1, 1114114, 2, 1, 1179650, 2, 1, 1245186, 2, 1, 1310722, 2, 1, 1376258, 2, 1, 1441794, 131074, 0, 1507330, 2, 1, 1572866, 2, 1, 1638402, 2, 1, 1703938, 131073, 2, 1769474, 65537, 2, 1835010, 131073, 2, 1900546, 196609, 1, 655363, 131073, 0, 720899, 65537, 0, 786435, 131073, 2, 851971, 2, 1, 917507, 2, 1, 983043, 131074, 0, 1048579, 2, 1, 1114115, 2, 1, 1179651, 2, 1, 1245187, 2, 1, 1310723, 2, 1, 1376259, 2, 1, 1441795, 131074, 0, 1507331, 2, 1, 1572867, 2, 1, 1638403, 2, 1, 1703939, 131073, 2, 1769475, 65537, 2, 1835011, 131073, 2, 1900547, 196609, 1, 655364, 131073, 0, 720900, 65537, 0, 786436, 131073, 2, 851972, 2, 1, 917508, 2, 1, 983044, 131074, 0, 1048580, 2, 1, 1114116, 2, 1, 1179652, 65538, 0, 1245188, 2, 1, 1310724, 2, 1, 1376260, 2, 1, 1441796, 131074, 0, 1507332, 2, 1, 1572868, 2, 1, 1638404, 2, 1, 1703940, 131073, 2, 1769476, 65537, 2, 1835012, 131073, 2, 1900548, 196609, 1, 655365, 131073, 0, 720901, 65537, 0, 786437, 131073, 2, 851973, 2, 1, 917509, 2, 1, 983045, 131074, 0, 1048581, 2, 1, 1114117, 2, 1, 1179653, 131074, 0, 1245189, 2, 1, 1310725, 2, 1, 1376261, 2, 1, 1441797, 131074, 0, 1507333, 2, 1, 1572869, 2, 1, 1638405, 2, 1, 1703941, 131073, 2, 1769477, 65537, 2, 1835013, 131073, 2, 1900549, 196609, 1, 655366, 131073, 0, 720902, 65537, 0, 786438, 131073, 2, 851974, 2, 1, 917510, 2, 1, 983046, 131074, 0, 1048582, 2, 1, 1114118, 2, 1, 1179654, 131074, 0, 1245190, 2, 1, 1310726, 2, 1, 1376262, 2, 1, 1441798, 131074, 0, 1507334, 2, 1, 1572870, 2, 1, 1638406, 2, 1, 1703942, 131073, 2, 1769478, 65537, 2, 1835014, 131073, 2, 1900550, 196609, 1, 655367, 131073, 0, 720903, 65537, 0, 786439, 131073, 2, 851975, 2, 1, 917511, 2, 1, 983047, 131074, 0, 1048583, 2, 1, 1114119, 2, 1, 1179655, 131074, 0, 1245191, 2, 1, 1310727, 2, 1, 1376263, 2, 1, 1441799, 131074, 0, 1507335, 2, 1, 1572871, 2, 1, 1638407, 2, 1, 1703943, 131073, 2, 1769479, 65537, 2, 1835015, 131073, 2, 1900551, 196609, 1, 655368, 131073, 0, 720904, 65537, 0, 786440, 131073, 2, 851976, 2, 1, 917512, 2, 1, 983048, 131074, 0, 1048584, 2, 1, 1114120, 2, 1, 1179656, 131074, 0, 1245192, 2, 1, 1310728, 2, 1, 1376264, 2, 1, 1441800, 131074, 0, 1507336, 2, 1, 1572872, 2, 1, 1638408, 2, 1, 1703944, 131073, 2, 1769480, 65537, 2, 1835016, 131073, 2, 1900552, 196609, 1, 655369, 131073, 0, 720905, 65537, 0, 786441, 131073, 2, 851977, 2, 1, 917513, 2, 1, 983049, 131074, 0, 1048585, 2, 1, 1114121, 2, 1, 1179657, 131074, 0, 1245193, 2, 1, 1310729, 2, 1, 1376265, 262146, 0, 1441801, 131074, 0, 1507337, 2, 1, 1572873, 2, 1, 1638409, 262146, 0, 1703945, 131073, 2, 1769481, 65537, 2, 1835017, 131073, 2, 1900553, 196609, 1, 655370, 131073, 0, 720906, 65537, 0, 786442, 131073, 2, 851978, 2, 1, 917514, 2, 1, 983050, 196610, 0, 1048586, 2, 1, 1114122, 2, 1, 1179658, 131074, 0, 1245194, 2, 1, 1310730, 2, 1, 1376266, 2, 1, 1441802, 196610, 0, 1507338, 2, 1, 1572874, 2, 1, 1638410, 65538, 0, 1703946, 131073, 2, 1769482, 65537, 2, 1835018, 131073, 2, 1900554, 196609, 1, 655371, 131073, 0, 720907, 65537, 0, 786443, 131073, 2, 851979, 2, 1, 917515, 2, 1, 983051, 262146, 0, 1048587, 2, 1, 1114123, 2, 1, 1179659, 131074, 0, 1245195, 2, 1, 1310731, 2, 1, 1376267, 2, 1, 1441803, 262146, 0, 1507339, 2, 1, 1572875, 2, 1, 1638411, 131074, 0, 1703947, 131073, 2, 1769483, 65537, 2, 1835019, 131073, 2, 1900555, 196609, 1, 655372, 131073, 0, 720908, 65537, 0, 786444, 131073, 2, 851980, 2, 1, 917516, 2, 1, 983052, 2, 1, 1048588, 2, 1, 1114124, 2, 1, 1179660, 131074, 0, 1245196, 2, 1, 1310732, 2, 1, 1376268, 2, 1, 1441804, 2, 1, 1507340, 2, 1, 1572876, 262146, 0, 1638412, 131074, 0, 1703948, 131073, 2, 1769484, 65537, 2, 1835020, 131073, 2, 1900556, 196609, 1, 655373, 131073, 0, 720909, 65537, 0, 786445, 131073, 2, 851981, 2, 1, 917517, 2, 1, 983053, 262146, 0, 1048589, 2, 1, 1114125, 2, 1, 1179661, 131074, 0, 1245197, 2, 1, 1310733, 2, 1, 1376269, 2, 1, 1441805, 2, 1, 1507341, 262146, 0, 1572877, 65538, 0, 1638413, 131074, 0, 1703949, 131073, 2, 1769485, 65537, 2, 1835021, 131073, 2, 1900557, 196609, 1, 655374, 131073, 0, 720910, 65537, 0, 786446, 131073, 2, 851982, 131073, 2, 917518, 131073, 2, 983054, 131073, 2, 1048590, 131073, 2, 1114126, 131073, 2, 1179662, 131073, 2, 1245198, 131073, 2, 1310734, 131073, 2, 1376270, 131073, 2, 1441806, 131073, 2, 1507342, 131073, 2, 1572878, 131073, 2, 1638414, 131073, 2, 1703950, 131073, 2, 1769486, 65537, 2, 1835022, 131073, 2, 1900558, 196609, 1, 655375, 131073, 0, 720911, 65537, 0, 786447, 131073, 0, 851983, 131073, 0, 917519, 131073, 0, 983055, 131073, 0, 1048591, 131073, 0, 1114127, 131073, 0, 1179663, 131073, 0, 1245199, 131073, 0, 1310735, 131073, 0, 1376271, 131073, 0, 1441807, 131073, 0, 1507343, 131073, 0, 1572879, 131073, 0, 1638415, 131073, 0, 1703951, 131073, 0, 1769487, 65537, 2, 1835023, 131073, 2, 1900559, 196609, 1, 655376, 131073, 0, 720912, 65537, 0, 786448, 131073, 0, 851984, 131073, 0, 917520, 131073, 0, 983056, 131073, 0, 1048592, 131073, 0, 1114128, 131073, 0, 1179664, 131073, 0, 1245200, 131073, 0, 1310736, 131073, 0, 1376272, 131073, 0, 1441808, 131073, 0, 1507344, 131073, 0, 1572880, 131073, 0, 1638416, 131073, 0, 1703952, 131073, 0, 1769488, 65537, 2, 1835024, 131073, 2, 1900560, 196609, 1, 655377, 131073, 0, 720913, 65537, 0, 786449, 131073, 0, 851985, 131073, 0, 917521, 131073, 0, 983057, 131073, 0, 1048593, 131073, 0, 1114129, 131073, 0, 1179665, 131073, 0, 1245201, 131073, 0, 1310737, 131073, 0, 1376273, 131073, 0, 1441809, 131073, 0, 1507345, 131073, 0, 1572881, 131073, 0, 1638417, 131073, 0, 1703953, 131073, 0, 1769489, 131073, 0, 1835025, 131073, 0, 1900561, 196609, 1, 655378, 131073, 0, 720914, 65537, 0, 786450, 131073, 0, 851986, 131073, 0, 917522, 131073, 0, 983058, 131073, 0, 1048594, 131073, 0, 1114130, 131073, 0, 1179666, 131073, 0, 1245202, 131073, 0, 1310738, 131073, 0, 1376274, 131073, 0, 1441810, 131073, 0, 1507346, 131073, 0, 1572882, 131073, 0, 1638418, 131073, 0, 1703954, 131073, 0, 1769490, 131073, 0, 1835026, 131073, 0, 1900562, 196609, 1, 655379, 131073, 0, 720915, 65537, 0, 786451, 131073, 0, 851987, 131073, 0, 917523, 131073, 0, 983059, 131073, 0, 1048595, 131073, 0, 1114131, 131073, 0, 1179667, 131073, 0, 1245203, 131073, 0, 1310739, 131073, 0, 1376275, 131073, 0, 1441811, 131073, 0, 1507347, 131073, 0, 1572883, 131073, 0, 1638419, 131073, 0, 1703955, 131073, 0, 1769491, 131073, 0, 1835027, 131073, 0, 1900563, 196609, 1, 655380, 131073, 0, 720916, 65537, 0, 786452, 131073, 0, 851988, 131073, 0, 917524, 131073, 0, 983060, 131073, 0, 1048596, 131073, 0, 1114132, 131073, 0, 1179668, 131073, 0, 1245204, 131073, 0, 1310740, 131073, 0, 1376276, 131073, 0, 1441812, 131073, 0, 1507348, 131073, 0, 1572884, 131073, 0, 1638420, 131073, 0, 1703956, 131073, 0, 1769492, 131073, 0, 1835028, 131073, 0, 1900564, 1, 1, 2031609, 1, 65537, 2031610, 196609, 1, 2031611, 196609, 1, 2031612, 196609, 1, 2031613, 196609, 1, 2031614, 196609, 1, 2031615, 196609, 1, 1966080, 196609, 1, 1966081, 196609, 1, 1966082, 196609, 1, 1966083, 196609, 1, 1966084, 196609, 1, 1966085, 196609, 1, 1966086, 196609, 1, 1966087, 196609, 1, 1966088, 196609, 1, 1966089, 196609, 1, 1966090, 196609, 1, 1966091, 196609, 1, 1966092, 196609, 1, 1966093, 196609, 1, 1966094, 196609, 1, 1966095, 196609, 1, 1966096, 196609, 1, 1966097, 196609, 1, 1966098, 196609, 1, 1966099, 196609, 1, 1966100, 1, 1, 524302, 131073, 0, 524301, 131073, 0, 524300, 131073, 0, 524299, 131073, 0, 524298, 131073, 0, 524297, 131073, 0, 524296, 131073, 0, 524295, 131073, 0, 524294, 131073, 0, 524293, 131073, 0, 524292, 131073, 0, 524291, 131073, 0, 524290, 131073, 0, 524289, 131073, 0, 524288, 131073, 0, 589823, 131073, 0, 589822, 131073, 0, 589821, 131073, 0, 589820, 131073, 0, 589819, 131073, 0, 589818, 131073, 0, 589817, 131073, 0, 655353, 131073, 0, 655354, 131073, 0, 655355, 131073, 0, 655356, 131073, 0, 655357, 131073, 0, 655358, 131073, 0, 655359, 131073, 0, 589824, 131073, 0, 589825, 131073, 0, 589826, 131073, 0, 589827, 131073, 0, 589828, 131073, 0, 589829, 131073, 0, 589830, 131073, 0, 589831, 131073, 0, 589832, 131073, 0, 589833, 131073, 0, 589834, 131073, 0, 589835, 131073, 0, 589836, 131073, 0, 589837, 131073, 0, 589838, 131073, 0, 589839, 131073, 0, 524303, 131073, 0, 524304, 131073, 0, 589840, 131073, 0, 589841, 131073, 0, 524305, 131073, 0, 524306, 131073, 0, 589842, 131073, 0, 589843, 131073, 0, 524307, 131073, 0, 524308, 131073, 0, 589844, 131073, 0, 2097145, 1, 65537, 2097146, 196609, 1, 2097147, 196609, 1, 2097148, 196609, 1, 2097149, 196609, 1, 2097150, 196609, 1, 2097151, 196609, 1, 2031616, 196609, 1, 2031617, 196609, 1, 2031618, 196609, 1, 2031619, 196609, 1, 2031620, 196609, 1, 2031621, 196609, 1, 2031622, 196609, 1, 2031623, 196609, 1, 2031624, 196609, 1, 2031625, 196609, 1, 2031626, 196609, 1, 2031627, 196609, 1, 2031628, 196609, 1, 2031629, 196609, 1, 2031630, 196609, 1, 2031631, 196609, 1, 2031632, 196609, 1, 2031633, 196609, 1, 2031634, 196609, 1, 2031635, 196609, 1, 2031636, 1, 1, 2097172, 1, 1, 2097171, 196609, 1, 2097170, 196609, 1, 2097169, 196609, 1, 2097168, 196609, 1, 2097167, 196609, 1, 2097166, 196609, 1, 2097165, 196609, 1, 2097164, 196609, 1, 2097163, 196609, 1, 2097162, 196609, 1, 2097161, 196609, 1, 2097160, 196609, 1, 2097159, 196609, 1, 2097158, 196609, 1, 2097157, 196609, 1, 2097156, 196609, 1, 2097155, 196609, 1, 2097154, 196609, 1, 2097153, 196609, 1, 2097152, 196609, 1, 2162687, 196609, 1, 2162686, 196609, 1, 2162685, 196609, 1, 2162684, 196609, 1, 2162683, 196609, 1, 2162682, 196609, 1, 2162681, 1, 65537, 2162680, 131073, 0, 2097144, 131073, 0, 2031608, 131073, 0, 1966072, 131073, 0, 1900536, 131073, 0, 1835000, 131073, 0, 1769464, 131073, 0, 1703928, 131073, 0, 1638392, 131073, 0, 1572856, 131073, 0, 1507320, 131073, 0, 1441784, 131073, 0, 1376248, 131073, 0, 1310712, 131073, 0, 1245176, 131073, 0, 1179640, 131073, 0, 1114104, 131073, 0, 1048568, 131073, 0, 983032, 131073, 0, 917496, 131073, 0, 851960, 131073, 0, 786424, 131073, 0, 720888, 131073, 0, 655352, 131073, 0, 589816, 131073, 0, 524280, 131073, 0, 458773, 131073, 0, 524309, 131073, 0, 589845, 131073, 0, 655381, 131073, 0, 720917, 131073, 0, 786453, 131073, 0, 851989, 131073, 0, 917525, 131073, 0, 983061, 131073, 0, 1048597, 131073, 0, 1114133, 131073, 0, 1179669, 131073, 0, 1245205, 131073, 0, 1310741, 131073, 0, 1376277, 131073, 0, 1441813, 131073, 0, 1507349, 131073, 0, 1572885, 131073, 0, 1638421, 131073, 0, 1703957, 131073, 0, 1769493, 131073, 0, 1835029, 131073, 0, 1900565, 131073, 0, 1966101, 131073, 0, 2031637, 131073, 0, 2097173, 131073, 0, 458744, 196609, 0, 393237, 196609, 0, 524277, 131073, 0, 589813, 131073, 0, 655349, 131073, 0, 720885, 131073, 0, 786421, 131073, 0, 851957, 131073, 0, 917493, 131073, 0, 983029, 131073, 0, 1048565, 131073, 0, 1114101, 131073, 0, 1179637, 131073, 0, 1245173, 131073, 0, 1310709, 131073, 0, 1376245, 131073, 0, 1441781, 131073, 0, 1507317, 131073, 0, 1572853, 131073, 0, 1638389, 131073, 0, 1703925, 131073, 0, 1769461, 131073, 0, 1834997, 131073, 0, 1900533, 131073, 0, 1966069, 131073, 0, 2031605, 131073, 0, 2097141, 131073, 0, 524278, 131073, 0, 589814, 131073, 0, 655350, 131073, 0, 720886, 131073, 0, 786422, 131073, 0, 851958, 131073, 0, 917494, 131073, 0, 983030, 131073, 0, 1048566, 131073, 0, 1114102, 131073, 0, 1179638, 131073, 0, 1245174, 131073, 0, 1310710, 131073, 0, 1376246, 131073, 0, 1441782, 131073, 0, 1507318, 131073, 0, 1572854, 131073, 0, 1638390, 131073, 0, 1703926, 131073, 0, 1769462, 131073, 0, 1834998, 131073, 0, 1900534, 131073, 0, 1966070, 131073, 0, 2031606, 131073, 0, 2097142, 131073, 0, 524279, 131073, 0, 589815, 131073, 0, 655351, 131073, 0, 720887, 131073, 0, 786423, 131073, 0, 851959, 131073, 0, 917495, 131073, 0, 983031, 131073, 0, 1048567, 131073, 0, 1114103, 131073, 0, 1179639, 131073, 0, 1245175, 131073, 0, 1310711, 131073, 0, 1376247, 131073, 0, 1441783, 131073, 0, 1507319, 131073, 0, 1572855, 131073, 0, 1638391, 131073, 0, 1703927, 131073, 0, 1769463, 131073, 0, 1834999, 131073, 0, 1900535, 131073, 0, 1966071, 131073, 0, 2031607, 131073, 0, 2097143, 131073, 0, 2162677, 131073, 0, 2228213, 131073, 0, 2293749, 131073, 0, 2162678, 131073, 0, 2228214, 131073, 0, 2293750, 131073, 0, 2162679, 131073, 0, 2228215, 131073, 0, 2293751, 131073, 0, 2228216, 131073, 0, 2293752, 131073, 0, 2228217, 1, 65537, 2293753, 1, 65537, 2228218, 196609, 1, 2293754, 196609, 1, 2228219, 196609, 1, 2293755, 196609, 1, 2228220, 196609, 1, 2293756, 196609, 1, 2228221, 196609, 1, 2293757, 196609, 1, 2228222, 196609, 1, 2293758, 196609, 1, 2228223, 196609, 1, 2293759, 196609, 1, 2162688, 196609, 1, 2228224, 196609, 1, 2162689, 196609, 1, 2228225, 196609, 1, 2162690, 196609, 1, 2228226, 196609, 1, 2162691, 196609, 1, 2228227, 196609, 1, 2162692, 196609, 1, 2228228, 196609, 1, 2162693, 196609, 1, 2228229, 196609, 1, 2162694, 196609, 1, 2228230, 196609, 1, 2162695, 196609, 1, 2228231, 196609, 1, 2162696, 196609, 1, 2228232, 196609, 1, 2162697, 196609, 1, 2228233, 196609, 1, 2162698, 196609, 1, 2228234, 196609, 1, 2162699, 196609, 1, 2228235, 196609, 1, 2162700, 196609, 1, 2228236, 196609, 1, 2162701, 196609, 1, 2228237, 196609, 1, 2162702, 196609, 1, 2228238, 196609, 1, 2162703, 196609, 1, 2228239, 196609, 1, 2162704, 196609, 1, 2228240, 196609, 1, 2162705, 196609, 1, 2228241, 196609, 1, 2162706, 196609, 1, 2228242, 196609, 1, 2162707, 196609, 1, 2228243, 196609, 1, 2162708, 1, 1, 2228244, 1, 1, 2162709, 131073, 0, 2228245, 131073, 0, 2097174, 131073, 0, 2162710, 131073, 0, 2228246, 131073, 0, 2097175, 131073, 0, 2162711, 131073, 0, 2228247, 131073, 0, 458774, 131073, 0, 524310, 131073, 0, 589846, 131073, 0, 655382, 131073, 0, 720918, 131073, 0, 786454, 131073, 0, 851990, 131073, 0, 917526, 131073, 0, 983062, 131073, 0, 1048598, 131073, 0, 1114134, 131073, 0, 1179670, 131073, 0, 1245206, 131073, 0, 1310742, 131073, 0, 1376278, 131073, 0, 1441814, 131073, 0, 1507350, 131073, 0, 1572886, 131073, 0, 1638422, 131073, 0, 1703958, 131073, 0, 1769494, 131073, 0, 1835030, 131073, 0, 1900566, 131073, 0, 1966102, 131073, 0, 2031638, 131073, 0, 458775, 131073, 0, 524311, 131073, 0, 589847, 131073, 0, 655383, 131073, 0, 720919, 131073, 0, 786455, 131073, 0, 851991, 131073, 0, 917527, 131073, 0, 983063, 131073, 0, 1048599, 131073, 0, 1114135, 131073, 0, 1179671, 131073, 0, 1245207, 131073, 0, 1310743, 131073, 0, 1376279, 131073, 0, 1441815, 131073, 0, 1507351, 131073, 0, 1572887, 131073, 0, 1638423, 131073, 0, 1703959, 131073, 0, 1769495, 131073, 0, 1835031, 131073, 0, 1900567, 131073, 0, 1966103, 131073, 0, 2031639, 131073, 0, 458776, 131073, 0, 524312, 131073, 0, 589848, 131073, 0, 655384, 131073, 0, 720920, 131073, 0, 786456, 131073, 0, 851992, 131073, 0, 917528, 131073, 0, 983064, 131073, 0, 1048600, 131073, 0, 1114136, 131073, 0, 1179672, 131073, 0, 1245208, 131073, 0, 1310744, 131073, 0, 1376280, 131073, 0, 1441816, 131073, 0, 1507352, 131073, 0, 1572888, 131073, 0, 1638424, 131073, 0, 1703960, 131073, 0, 1769496, 131073, 0, 1835032, 131073, 0, 1900568, 131073, 0, 1966104, 131073, 0, 2031640, 131073, 0, 2097176, 131073, 0, 2162712, 131073, 0, 2228248, 131073, 0, 458741, 196609, 0, 458742, 196609, 0, 458743, 196609, 0, 393238, 196609, 0, 393239, 196609, 0, 393240, 196609, 0)

[node name="FirstBackground" parent="FirstBackground" index="0"]
texture = ExtResource("2_wkpgp")

[node name="ExitDoor" parent="Entities" index="0" instance=ExtResource("11_1p26e")]
position = Vector2(224, 96)

[node name="Mother" parent="Entities" index="1" instance=ExtResource("4_8kyyb")]
position = Vector2(202, 84)
flip = true

[node name="ComputerTeleporter" parent="Entities" index="2" node_paths=PackedStringArray("target") instance=ExtResource("5_qs7uw")]
position = Vector2(31, 64)
target = NodePath("../TutorialDoor")

[node name="Collision" type="CollisionShape2D" parent="Entities/ComputerTeleporter" index="1"]
position = Vector2(0.5, -7.5)
shape = SubResource("RectangleShape2D_hum7y")

[node name="TutorialDoor" type="Sprite2D" parent="Entities" index="3"]
position = Vector2(23, 400)
texture = ExtResource("6_utuum")

[node name="Backpack" parent="Entities" index="4" instance=ExtResource("7_qy2n6")]
position = Vector2(11, 85)
texture = ExtResource("9_ty2if")

[node name="TutorialButton" parent="Entities" index="5" instance=ExtResource("8_ubejb")]
position = Vector2(32, 225)

[node name="Box" parent="Entities" index="6" instance=ExtResource("9_btgg1")]
position = Vector2(129, 340)
texture = ExtResource("10_5lq5f")
distance = 5

[node name="Collision" type="CollisionShape2D" parent="Entities/Box" index="1"]
position = Vector2(7.62939e-06, 0.25)
shape = SubResource("RectangleShape2D_8sfj2")
metadata/_edit_lock_ = true

[node name="SpawnPoint" parent="." index="5"]
position = Vector2(155, 64)
